--- a/Seismic.ipynb
+++ b/Seismic.ipynb
@@ -2,25 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[0;32m\"g:\\python\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3441\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-3e11a77bcc33>\"\u001b[1;36m, line \u001b[1;32m3\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from bridge_specs import box,pier\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"G:\\Python\\PSC_bridge\\bridge_specs.py\"\u001b[1;36m, line \u001b[1;32m81\u001b[0m\n\u001b[1;33m    pcap_area=\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ],
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (bridge_specs.py, line 81)",
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -30,16 +18,276 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Unfactored Reactions import\n",
-    "\n"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Unfactored Reactions import\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"Data of Live Loads\"\"\"\n",
+    "df1=pd.read_excel('outputs/Live_Loads_Seismic.xlsx')\n",
+    "df1.drop(['Unnamed: 0','at'],axis=1,inplace=True)\n",
+    "df1.rename(columns={'Unnamed: 1':'Loadings','sum':'Sum'},inplace=True)\n",
+    "\n",
+    "\"\"\"Data of Dead Loads\"\"\"\n",
+    "df2=pd.read_csv('outputs/DL_for_Seismic.csv')\n",
+    "df2.rename(columns={'Unnamed: 0':'Loadings'},inplace=True)\n",
+    "\"\"\"Data of eccentricity\"\"\"\n",
+    "df3=pd.read_excel('outputs/max_e.xlsx')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Loadings</th>\n",
+       "      <th>RL</th>\n",
+       "      <th>RR</th>\n",
+       "      <th>Sum</th>\n",
+       "      <th>L_Larm</th>\n",
+       "      <th>R_Larm</th>\n",
+       "      <th>T_Larm</th>\n",
+       "      <th>MomL</th>\n",
+       "      <th>MomT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Class A</td>\n",
+       "      <td>240.2016</td>\n",
+       "      <td>454.5144</td>\n",
+       "      <td>694.7160</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3286.9566</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Class 70RW</td>\n",
+       "      <td>219.8760</td>\n",
+       "      <td>911.7240</td>\n",
+       "      <td>1131.6000</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>0.405</td>\n",
+       "      <td>5611.0860</td>\n",
+       "      <td>458.29800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Class 70RT</td>\n",
+       "      <td>344.8160</td>\n",
+       "      <td>349.3660</td>\n",
+       "      <td>694.1820</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>0.350</td>\n",
+       "      <td>3127.2315</td>\n",
+       "      <td>242.96370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Class A</td>\n",
+       "      <td>508.7832</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>508.7832</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1907.9370</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Class 70RW</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>952.1040</td>\n",
+       "      <td>952.1040</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>0.405</td>\n",
+       "      <td>4998.5460</td>\n",
+       "      <td>385.60212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Class 70RT</td>\n",
+       "      <td>678.3700</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>678.3700</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>0.350</td>\n",
+       "      <td>2543.8875</td>\n",
+       "      <td>237.42950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dead Load</td>\n",
+       "      <td>4584.3750</td>\n",
+       "      <td>4584.3750</td>\n",
+       "      <td>9168.7500</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>1.500</td>\n",
+       "      <td>41259.3750</td>\n",
+       "      <td>13753.12500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Other Load</td>\n",
+       "      <td>325.0000</td>\n",
+       "      <td>325.0000</td>\n",
+       "      <td>650.0000</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>1.500</td>\n",
+       "      <td>2925.0000</td>\n",
+       "      <td>975.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Surface Load</td>\n",
+       "      <td>330.0000</td>\n",
+       "      <td>330.0000</td>\n",
+       "      <td>660.0000</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>1.500</td>\n",
+       "      <td>2970.0000</td>\n",
+       "      <td>990.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedestrian load</td>\n",
+       "      <td>150.0000</td>\n",
+       "      <td>150.0000</td>\n",
+       "      <td>300.0000</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.25</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1350.0000</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Loadings         RL         RR        Sum  L_Larm  R_Larm  T_Larm  \\\n",
+       "0          Class A   240.2016   454.5144   694.7160    3.75    5.25   0.000   \n",
+       "1       Class 70RW   219.8760   911.7240  1131.6000    3.75    5.25   0.405   \n",
+       "2       Class 70RT   344.8160   349.3660   694.1820    3.75    5.25   0.350   \n",
+       "3          Class A   508.7832     0.0000   508.7832    3.75    5.25   0.000   \n",
+       "4       Class 70RW     0.0000   952.1040   952.1040    3.75    5.25   0.405   \n",
+       "5       Class 70RT   678.3700     0.0000   678.3700    3.75    5.25   0.350   \n",
+       "0        Dead Load  4584.3750  4584.3750  9168.7500    3.75    5.25   1.500   \n",
+       "1       Other Load   325.0000   325.0000   650.0000    3.75    5.25   1.500   \n",
+       "2     Surface Load   330.0000   330.0000   660.0000    3.75    5.25   1.500   \n",
+       "3  Pedestrian load   150.0000   150.0000   300.0000    3.75    5.25   0.000   \n",
+       "\n",
+       "         MomL         MomT  \n",
+       "0   3286.9566      0.00000  \n",
+       "1   5611.0860    458.29800  \n",
+       "2   3127.2315    242.96370  \n",
+       "3   1907.9370      0.00000  \n",
+       "4   4998.5460    385.60212  \n",
+       "5   2543.8875    237.42950  \n",
+       "0  41259.3750  13753.12500  \n",
+       "1   2925.0000    975.00000  \n",
+       "2   2970.0000    990.00000  \n",
+       "3   1350.0000      0.00000  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_loads"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "ecc=np.abs(np.around(np.array(df3.loc[:,'MaxEccentricity'].values.tolist()),3))\n",
+    "ecc\n",
+    "df1=df1.assign(L_Larm=pier['l_larm'],R_Larm=pier['r_larm'],T_Larm=np.concatenate((ecc,ecc),axis=0))\n",
+    "df2=df2.assign(L_Larm=pier['l_larm'],R_Larm=pier['r_larm'],T_Larm=pier['t_larm'])\n",
+    "df2.loc[3,'T_Larm']=0\n",
+    "df_loads=pd.concat([df1,df2])\n",
+    "df_loads['MomL']=df_loads['RL']*df_loads['L_Larm']+df_loads['RR']*df_loads['R_Larm']\n",
+    "df_loads['MomT']=(df_loads['RL']+df_loads['RR'])*df_loads['T_Larm']"
+   ]
   },
   {
    "cell_type": "code",
@@ -52,116 +300,59 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"Data of Live Loads\"\"\"\n",
-    "df1=pd.read_csv('outputs/Live_Loads_Seismic.csv')\n",
-    "\n",
-    "\n",
-    "\"\"\"Data of Dead Loads\"\"\"\n",
-    "df2=pd.read_csv('outputs/DL_for_Seismic.csv')\n",
-    "\n",
-    "\"\"\"Data of eccentricity\"\"\"\n",
-    "df3=pd.read_excel('outputs/max_e.xlsx')\n",
-    "\n",
-    "\n"
+    "print(f\"Maximum Longitudinal Moment: {sum(df_loads['MomL'])}\\nMaximum Transverse Moment: {sum(df_loads['MomT'])}\")\n",
+    "# print(df3)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    " -----------\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n",
-    "ecc=np.abs(np.around(np.array(df3.iloc[:,4].values.tolist()),3))\n",
-    "df1=df1.assign(L_Larm=pier.l_larm,R_Larm=pier.r_larm,T_Larm=ecc)\n",
-    "df2=df2.assign(L_Larm=pier.l_larm,R_Larm=pier.r_larm,T_Larm=pier.t_larm)\n",
-    "df2.iloc[3,6]=0\n",
-    "df_loads=pd.concat([df1,df2])\n",
-    "df_loads['MomL']=df_loads['RL']*df_loads['L_Larm']+df_loads['RR']*df_loads['R_Larm']\n",
-    "df_loads['MomT']=(df_loads['RL']+df_loads['RR'])*df_loads['T_Larm']"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print(f\"Maximum Longitudinal Moment: {sum(df_loads['MomL'])}\\nMaximum Transverse Moment: {sum(df_loads['MomT'])}\")\n",
-    "# print(df3)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "# print()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
     "print (ecc)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Calculation of Max Reactions\n"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Calculation of Max Reactions\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "i=round(sum(df2.iloc[:,3]),5)\n",
@@ -173,56 +364,49 @@
     "tra_max=i*tra[0]+j*tra[1]+k*tra[2]\n",
     "print(i,j,k)\n",
     "print(f\"Maximum longitudinal force: {lon_max}\\nMaximum Transverse Force: {tra_max}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Pier Specifications \n"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% \n",
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%% md\n"
     }
    },
-   "execution_count": null,
-   "outputs": []
+   "source": [
+    "Pier Specifications \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%% \n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "\n",
-    "sc"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+    "I=0\n",
+    "fck=20\n",
+    "fcm=fck+10\n",
+    "Ecm=22*(fcm/12.5)**0.3\n",
+    "k=3*Ecm*I\n"
+   ]
   }
  ],
  "metadata": {
@@ -241,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   },
   "pycharm": {
    "stem_cell": {
