--- a/calculation.ipynb
+++ b/calculation.ipynb
@@ -1024,9 +1024,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (PSC_bridge)",
+   "name": "pycharm-b98eb07c",
    "language": "python",
-   "name": "pycharm-290fee38"
+   "display_name": "PyCharm (Autocad_Automation_learning-master)"
   },
   "language_info": {
    "codemirror_mode": {
