Seismic Loads Calculated

--- a/Seismic.ipynb
+++ b/Seismic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -65,194 +65,16 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Loadings</th>\n",
-       "      <th>RL</th>\n",
-       "      <th>RR</th>\n",
-       "      <th>Sum</th>\n",
-       "      <th>L_Larm</th>\n",
-       "      <th>R_Larm</th>\n",
-       "      <th>T_Larm</th>\n",
-       "      <th>MomL</th>\n",
-       "      <th>MomT</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Class A</td>\n",
-       "      <td>240.2016</td>\n",
-       "      <td>454.5144</td>\n",
-       "      <td>694.7160</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>3286.9566</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Class 70RW</td>\n",
-       "      <td>219.8760</td>\n",
-       "      <td>911.7240</td>\n",
-       "      <td>1131.6000</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>0.405</td>\n",
-       "      <td>5611.0860</td>\n",
-       "      <td>458.29800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Class 70RT</td>\n",
-       "      <td>344.8160</td>\n",
-       "      <td>349.3660</td>\n",
-       "      <td>694.1820</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>0.350</td>\n",
-       "      <td>3127.2315</td>\n",
-       "      <td>242.96370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Class A</td>\n",
-       "      <td>508.7832</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>508.7832</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1907.9370</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Class 70RW</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>952.1040</td>\n",
-       "      <td>952.1040</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>0.405</td>\n",
-       "      <td>4998.5460</td>\n",
-       "      <td>385.60212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Class 70RT</td>\n",
-       "      <td>678.3700</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>678.3700</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>0.350</td>\n",
-       "      <td>2543.8875</td>\n",
-       "      <td>237.42950</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Dead Load</td>\n",
-       "      <td>4584.3750</td>\n",
-       "      <td>4584.3750</td>\n",
-       "      <td>9168.7500</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>1.500</td>\n",
-       "      <td>41259.3750</td>\n",
-       "      <td>13753.12500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Other Load</td>\n",
-       "      <td>325.0000</td>\n",
-       "      <td>325.0000</td>\n",
-       "      <td>650.0000</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>1.500</td>\n",
-       "      <td>2925.0000</td>\n",
-       "      <td>975.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Surface Load</td>\n",
-       "      <td>330.0000</td>\n",
-       "      <td>330.0000</td>\n",
-       "      <td>660.0000</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>1.500</td>\n",
-       "      <td>2970.0000</td>\n",
-       "      <td>990.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Pedestrian load</td>\n",
-       "      <td>150.0000</td>\n",
-       "      <td>150.0000</td>\n",
-       "      <td>300.0000</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>1350.0000</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Loadings         RL         RR        Sum  L_Larm  R_Larm  T_Larm  \\\n",
-       "0          Class A   240.2016   454.5144   694.7160    3.75    5.25   0.000   \n",
-       "1       Class 70RW   219.8760   911.7240  1131.6000    3.75    5.25   0.405   \n",
-       "2       Class 70RT   344.8160   349.3660   694.1820    3.75    5.25   0.350   \n",
-       "3          Class A   508.7832     0.0000   508.7832    3.75    5.25   0.000   \n",
-       "4       Class 70RW     0.0000   952.1040   952.1040    3.75    5.25   0.405   \n",
-       "5       Class 70RT   678.3700     0.0000   678.3700    3.75    5.25   0.350   \n",
-       "0        Dead Load  4584.3750  4584.3750  9168.7500    3.75    5.25   1.500   \n",
-       "1       Other Load   325.0000   325.0000   650.0000    3.75    5.25   1.500   \n",
-       "2     Surface Load   330.0000   330.0000   660.0000    3.75    5.25   1.500   \n",
-       "3  Pedestrian load   150.0000   150.0000   300.0000    3.75    5.25   0.000   \n",
-       "\n",
-       "         MomL         MomT  \n",
-       "0   3286.9566      0.00000  \n",
-       "1   5611.0860    458.29800  \n",
-       "2   3127.2315    242.96370  \n",
-       "3   1907.9370      0.00000  \n",
-       "4   4998.5460    385.60212  \n",
-       "5   2543.8875    237.42950  \n",
-       "0  41259.3750  13753.12500  \n",
-       "1   2925.0000    975.00000  \n",
-       "2   2970.0000    990.00000  \n",
-       "3   1350.0000      0.00000  "
-      ]
+      "text/plain": "          Loadings        RL        RR      Sum  L_Larm  R_Larm  T_Larm\n0        Dead Load  4584.375  4584.375  9168.75    3.75    5.25     1.5\n1       Other Load   325.000   325.000   650.00    3.75    5.25     1.5\n2     Surface Load   264.000   264.000   528.00    3.75    5.25     1.5\n3  Pedestrian load   150.000   150.000   300.00    3.75    5.25     0.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Loadings</th>\n      <th>RL</th>\n      <th>RR</th>\n      <th>Sum</th>\n      <th>L_Larm</th>\n      <th>R_Larm</th>\n      <th>T_Larm</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Dead Load</td>\n      <td>4584.375</td>\n      <td>4584.375</td>\n      <td>9168.75</td>\n      <td>3.75</td>\n      <td>5.25</td>\n      <td>1.5</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Other Load</td>\n      <td>325.000</td>\n      <td>325.000</td>\n      <td>650.00</td>\n      <td>3.75</td>\n      <td>5.25</td>\n      <td>1.5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Surface Load</td>\n      <td>264.000</td>\n      <td>264.000</td>\n      <td>528.00</td>\n      <td>3.75</td>\n      <td>5.25</td>\n      <td>1.5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Pedestrian load</td>\n      <td>150.000</td>\n      <td>150.000</td>\n      <td>300.00</td>\n      <td>3.75</td>\n      <td>5.25</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 30,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 15
     }
    ],
    "source": [
-    "df_loads"
+    "df2"
    ]
   },
   {
@@ -269,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "is_executing": false,
