--- a/Cable Arrangement.ipynb
+++ b/Cable Arrangement.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6\n"
+     ]
+    }
+   ],
    "source": [
     "from Cross import section\n",
     "import math\n"
@@ -12,29 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n",
-      "10.0\n",
-      "3.0\n",
-      "4.0\n",
-      "2.0\n"
+      "0.3\n",
+      "0.6\n",
+      "0.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.2"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -47,7 +43,11 @@
     "    mina=0.280\n",
     "    minb=0.220\n",
     "\n",
-    "expanlen=min(section.length[13],section.length[16])\n",
+    "try:\n",
+    "    expanlen=min(section.length[14],section.length[17])+section.length[0]\n",
+    "except:\n",
+    "    expanlen=section.length[0]\n",
+    "\n",
     "b=section.height[2]/2\n",
     "if b<minb:\n",
     "    raise ValueError (\"Very bad input section\")\n",
@@ -68,12 +68,17 @@
     "\n",
     "print(ntop)\n",
     "print(nbot)\n",
+    "\n",
     "nbotup=0\n",
     "\n",
-    "adash=cc/(nbot+1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "adash=cc/(nbot-1)\n",
     "while adash<a:\n",
     "\n",
     "    if (nbotup/2)<=math.floor((expanlen-2*e)/a):\n",
+    "        print((expanlen-2*e)/a)\n",
     "        nbot=nbot-2\n",
     "        nbotup=nbotup+2\n",
     "        adash=cc/(nbot+1)\n",
@@ -86,21 +91,21 @@
     "print(ntop)\n",
     "print(nbot)\n",
     "print(nbotup)\n",
-    "\n",
-    "amid=0.15\n",
-    "expanlen"
+    "# print(adash)\n",
+    "# amid=0.15\n",
+    "# expanlen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.8, 5.1], [3.8, 5.55], [3.8, 6.0], [6.8, 5.1], [6.8, 5.55], [6.8, 6.0], [4.4, 3.75], [5.0, 3.75], [5.6, 3.75], [6.2, 3.75], [4.4, 4.2], [4.85, 4.2], [5.6, 4.2], [5.15, 4.2]]\n"
+      "[[3.8, 5.1], [3.8, 5.55], [6.8, 5.1], [6.8, 5.55], [3.8, 3.75], [4.4, 3.75], [5.0, 3.75], [5.6, 3.75], [3.8, 4.2], [4.25, 4.2], [4.7, 4.2], [6.2, 4.2], [5.75, 4.2], [5.3, 4.2]]\n"
      ]
     },
     {
@@ -108,21 +113,21 @@
       "text/plain": [
        "[[3.8, 4.86564],\n",
        " [3.8, 5.23752],\n",
-       " [3.8, 5.6094],\n",
        " [6.8, 4.86564],\n",
        " [6.8, 5.23752],\n",
-       " [6.8, 5.6094],\n",
+       " [3.8, 3.75],\n",
        " [4.4, 3.75],\n",
        " [5.0, 3.75],\n",
        " [5.6, 3.75],\n",
-       " [6.2, 3.75],\n",
-       " [4.4, 4.2],\n",
-       " [4.85, 4.2],\n",
-       " [5.6, 4.2],\n",
-       " [5.15, 4.2]]"
+       " [3.8, 4.2],\n",
+       " [4.25, 4.2],\n",
+       " [4.7, 4.2],\n",
+       " [6.2, 4.2],\n",
+       " [5.75, 4.2],\n",
+       " [5.3, 4.2]]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,17 +160,17 @@
     "    \n",
     "for i in range(nbot):\n",
     "    if i==0:\n",
-    "        bottompos.append([round(x+y,4) for x,y in zip(section.position[0],[e+adash,b])])\n",
-    "        midbot.append([round(x+y,4) for x,y in zip(section.position[0],[e+adash,b])])\n",
+    "        bottompos.append([round(x+y,4) for x,y in zip(section.position[0],[e,b])])\n",
+    "        midbot.append([round(x+y,4) for x,y in zip(section.position[0],[e,b])])\n",
     "    if i>0:\n",
     "        bottompos.append([round(x+y,4) for x,y in zip(bottompos[i-1],[adash,0])])\n",
     "        midbot.append([round(x+y,4) for x,y in zip(midbot[i-1],[adash,0])])\n",
     "for i in range(nbotup):\n",
     "    if i==0:\n",
-    "        bottomposupleft.append([round(x+y,4) for x,y in zip(section.position[0],[e+adash,b+a])])\n",
-    "        bottomposupright.append([round(x+y,4) for x,y in zip(section.position[1],[-e-adash,b+a])])\n",
-    "        midbotupleft.append([round(x+y,4) for x,y in zip(section.position[0],[e+adash,b+a])])\n",
-    "        midbotupright.append([round(x+y,4) for x,y in zip(section.position[0],[-e-adash,b+a])])\n",
+    "        bottomposupleft.append([round(x+y,4) for x,y in zip(section.position[0],[e,b+a])])\n",
+    "        bottomposupright.append([round(x+y,4) for x,y in zip(section.position[1],[-e,b+a])])\n",
+    "        midbotupleft.append([round(x+y,4) for x,y in zip(section.position[0],[e,b+a])])\n",
+    "        midbotupright.append([round(x+y,4) for x,y in zip(section.position[0],[-e,b+a])])\n",
     "    if i>0:\n",
     "        bottomposupleft.append([round(x+y,4) for x,y in zip(bottomposupleft[i-1],[a,0])])\n",
     "        bottomposupright.append([round(x+y,4) for x,y in zip(bottomposupright[i-1],[-a,0])])\n",
