--- a/dead_loads.ipynb
+++ b/dead_loads.ipynb
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.3, 1.6], [0.3, 2.05], [0.3, 2.5], [0.3, 2.95], [3.3, 1.6], [3.3, 2.05], [3.3, 2.5], [3.3, 2.95], [0.3, 0.25], [0.9, 0.25], [1.5, 0.25], [2.1, 0.25], [0.3, 0.7], [2.7, 0.7]]\n"
+      "45896.48437500001\n"
      ]
     }
    ],
@@ -80,53 +80,50 @@
     "\n",
     "\n",
     "\"\"\"Creation of cable properties \"\"\"\n",
-    "cable=cables(35,14,section)\n",
+    "# cable=cables(35,14,section)\n",
     "\n",
     "\n",
     "\"\"\"Assigning section with cable \"\"\"\n",
     "section1=Cross_section(length,height)\n",
     "section1.cableprop=cables(35,14,section).cablepos(0,50)\n",
     "\n",
-    "print(section1.cableprop)\n",
+    "# print(section1.cableprop)\n",
+    "\n",
     "\n",
     "I=[]\n",
     "ymax=[]\n",
     "ymin=[]\n",
     "area_sum=[]\n",
-    "\n",
+    "cable_positions=[]\n",
     "\n",
     "\"\"\"Cross Section values for given no of divisions \"\"\"\n",
     "for i in range(len(sc)):\n",
-    "    \n",
-    "    section.expansion_width+=expansion_calc(span,sc,cable)\n",
+    "    cable=cables(35,14,section)\n",
+    "    section.expansion_width=expansion_calc(span,sc[i],cable)    \n",
     "    I.append(section.I)    \n",
     "    ymax.append(section.ymax)\n",
     "    ymin.append(section.ymin)\n",
     "    area_sum.append(sum(section.section_area))\n",
+    "    cable_positions.append(cable.cablepos(sc[i],span))\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "\n",
+    "PDL=[]\n",
+    "ODL=[]\n",
+    "PEDL=[]\n",
+    "SIDL=[]\n",
     "\n",
     "\"\"\"Calculation of loads \"\"\"\n",
-    "\n",
-    "PDL=Dead_Load('PDL',area_sum,sc,span,l_kerblen+r_kerblen,0.3,0.065,6,2,I,ymax,ymin)\n",
-    "ODL=Dead_Load('ODL',area_sum,sc,span,l_kerblen+r_kerblen,0.3,0.065,6,2,I,ymax,ymin)\n",
-    "PEDL=Dead_Load('PEDL',area_sum,sc,span,l_kerblen+r_kerblen,0.3,0.065,6,2,I,ymax,ymin)\n",
-    "SIDL=Dead_Load('SIDL',area_sum,sc,span,l_kerblen+r_kerblen,0.3,0.065,6,2,I,ymax,ymin)\n",
+    "for i in range(len(sc)):\n",
+    "    PDL.append(Dead_Load('PDL',area_sum[i],sc[i],span,l_kerblen+r_kerblen,0.3,0.065,6,2,I[i],ymax[i],ymin[i]))\n",
+    "    ODL.append(Dead_Load('ODL',area_sum[i],sc[i],span,l_kerblen+r_kerblen,0.3,0.065,6,2,I[i],ymax[i],ymin[i]))\n",
+    "    PEDL.append(Dead_Load('PEDL',area_sum[i],sc[i],span,l_kerblen+r_kerblen,0.3,0.065,6,2,I[i],ymax[i],ymin[i]))\n",
+    "    SIDL.append(Dead_Load('SIDL',area_sum[i],sc[i],span,l_kerblen+r_kerblen,0.3,0.065,6,2,I[i],ymax[i],ymin[i]))\n",
     "\n",
     "# excel_export(section)\n",
-    "# excel_loads(PDL,ODL,PEDL,SIDL,sc)\n",
-    "# print(section.Centroid)\n",
-    "# section.expansion_width=0.5\n",
-    "# print(section.cable_pos(35,14,50,12))\n",
-    "\n",
-    "# print(len(section.length))\n",
-    "# print(cable.cable_arrangement)\n",
-    "\n",
-    "# print(PDL.stress)\n",
-    "# print(section.I)"
+    "excel_loads(PDL,ODL,PEDL,SIDL,sc)\n",
+    "\n"
    ]
   }
  ],
