--- a/dead_loads.ipynb
+++ b/dead_loads.ipynb
@@ -63,14 +63,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45896.48437500001\n"
+      "   Section at     Dead Load  Other Loads  Surface Loads  Pedestrian Load\n",
+      "0        0.00      0.000000      0.00000       0.000000           0.0000\n",
+      "1        6.25  26772.949219   1777.34375    1173.046875         820.3125\n",
+      "2       12.50  45896.484375   3046.87500    2010.937500        1406.2500\n",
+      "3       18.75  57370.605469   3808.59375    2513.671875        1757.8125\n",
+      "4       25.00  61195.312500   4062.50000    2681.250000        1875.0000\n",
+      "5       31.25  57370.605469   3808.59375    2513.671875        1757.8125\n",
+      "6       37.50  45896.484375   3046.87500    2010.937500        1406.2500\n",
+      "7       43.75  26772.949219   1777.34375    1173.046875         820.3125\n",
+      "8       50.00      0.000000      0.00000       0.000000           0.0000\n"
      ]
     }
    ],
@@ -85,7 +94,7 @@
     "\n",
     "\"\"\"Assigning section with cable \"\"\"\n",
     "section1=Cross_section(length,height)\n",
-    "section1.cableprop=cables(35,14,section).cablepos(0,50)\n",
+    "section1.cableprop=cables(35,14,section).cablepos(,50)\n",
     "\n",
     "# print(section1.cableprop)\n",
     "\n",
@@ -125,6 +134,13 @@
     "excel_loads(PDL,ODL,PEDL,SIDL,sc)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +148,7 @@
    "hash": "57e1b559dacf43725e1ed3764b0ee83225f8bdeeef0b183e08a2c01330bea852"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -146,9 +162,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.5"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
