give this a look!!

--- a/prestressed.ipynb
+++ b/prestressed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ba6ea02b",
    "metadata": {},
    "outputs": [],
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1bbea425",
    "metadata": {},
    "outputs": [],
    "source": [
-    "span = box['span']"
+    " span = box['span']"
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ad0223ce",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f018f8bf",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d8dfa7ee",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "52aaf253",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9eff7697",
    "metadata": {},
    "outputs": [],
@@ -194,20 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "06f9f8f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "list_of_sections = sections #dummy\n",
-    "\n",
     "prestressing_force_full = 3400 #dummy\n",
     "prestressing_force_withloss = 0.75*prestressing_force_full"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ff3adecf",
    "metadata": {},
    "outputs": [],
@@ -236,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "21783053",
    "metadata": {
     "scrolled": true
@@ -250,7 +249,7 @@
     "# for index, i in enumerate(list_of_sections):\n",
     "#     list_tau_pre.append(tau(i, bm_pre[index]))\n",
     "    \n",
-    "list_tau_ax = [prestressing_force_full/sum(i.section_area) for i in list_of_sections]\n",
+    "# list_tau_ax = [prestressing_force_full/sum(i.section_area) for i in list_of_sections]\n",
     "\n",
     "list_tau_preTotal = [(list_tau_pre[index][0] + list_tau_ax[index], list_tau_pre[index][1] + list_tau_ax[index]) for index in range(len(list_of_sections))]"
    ]
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "6d14e7e4",
    "metadata": {},
    "outputs": [],
@@ -283,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "6ff56d9b",
    "metadata": {},
    "outputs": [],
@@ -301,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5f7eb964",
    "metadata": {},
    "outputs": [],
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "83c664ef",
    "metadata": {},
    "outputs": [],
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "6a6adcb8",
    "metadata": {},
    "outputs": [],
@@ -390,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "908723be",
    "metadata": {
     "scrolled": true
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "7be7cd5b",
    "metadata": {},
    "outputs": [],
@@ -443,7 +442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -457,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
