--- a/Pier Forces.ipynb
+++ b/Pier Forces.ipynb
@@ -9,9 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true,
     "pycharm": {
      "is_executing": false
     }
@@ -20,7 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "from irc6_2007 import mult_factor as mu,RR_factor as RR,vib_period as T,sag,f_watercurrent\n",
-    "from calcs import stiffness as K\n",
+    "# from calcs import stiffness as K\n",
     "import numpy as np\n",
     "from bridge_specs import box,pier,water\n",
     "import math"
@@ -30,24 +29,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "live=pd.read_excel('outputs/Live_Loads_Seismic.xlsx')\n",
-    "dead=pd.read_csv('outputs/DL_for_Seismic.csv')\n",
-    "impF=1.2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
     "pycharm": {
      "is_executing": false,
      "name": "#%%\n"
@@ -55,31 +36,62 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10633.07"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Unnamed: 0  Unnamed: 1        RL        RR      at        sum\n",
+      "0      MaxSF     Class A  240.2016  454.5144   69.57   694.7160\n",
+      "1        NaN  Class 70RW  219.8760  911.7240   64.19  1131.6000\n",
+      "2        NaN  Class 70RT  344.8160  349.3660   52.71   694.1820\n",
+      "3      MaxBM     Class A  508.7832    0.0000   50.74   508.7832\n",
+      "4        NaN  Class 70RW    0.0000  952.1040  109.08   952.1040\n",
+      "5        NaN  Class 70RT  678.3700    0.0000   50.74   678.3700\n"
+     ]
     }
    ],
    "source": [
-    "ll=live[\"sum\"].max()\n",
-    "dl=0\n",
-    "for i in range(3):dl+= dead.loc[i,\"Sum\"]\n",
-    "pedl=dead.loc[3,\"Sum\"]\n",
-    "sumlong=ll*mu(\"ll\",\"long\")+dl*mu(\"dl\",\"long\")+pedl*mu(\"pedl\",\"long\")\n",
-    "sumtrans=ll*mu(\"ll\",\"trans\")+dl*mu(\"dl\",\"trans\")+pedl*mu(\"pedl\",\"trans\")\n",
-    "sumtrans"
+    "live=pd.read_excel('outputs/Live_Loads_Seismic.xlsx')\n",
+    "dead=pd.read_csv('outputs/DL_for_Seismic.csv')\n",
+    "impF=1.2\n",
+    "print(live)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false,
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Unnamed: 0     RL     RR     Sum\n",
+      "0        Dead Load  625.0  625.0  1250.0\n",
+      "1       Other Load  325.0  325.0   650.0\n",
+      "2     Surface Load  214.5  214.5   429.0\n",
+      "3  Pedestrian load  150.0  150.0   300.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll=live[\"sum\"].max()\n",
+    "print(dead)\n",
+    "dl=0\n",
+    "for i in range(3):dl+= dead.loc[i,\"Sum\"]\n",
+    "pedl=dead.loc[3,\"Sum\"]\n",
+    "sumlong=ll*mu(\"ll\",\"long\")+dl*mu(\"dl\",\"long\")+pedl*mu(\"pedl\",\"long\")\n",
+    "sumtrans=ll*mu(\"ll\",\"trans\")+dl*mu(\"dl\",\"trans\")+pedl*mu(\"pedl\",\"trans\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
     "pycharm": {
      "is_executing": false,
      "name": "#%%\n"
@@ -92,7 +104,7 @@
        "'Substitute values of I and L from pier cap in 1 and pier stem in 2'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +120,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -121,7 +132,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_11904/2089633498.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mFShlong\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malong\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0msumlong\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mFShtrans\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0matrans\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0msumtrans\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mFSv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mavert\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0msumtrans\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\MILANJ~1\\AppData\\Local\\Temp/ipykernel_5852/2089633498.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mFShlong\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malong\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0msumlong\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mFShtrans\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0matrans\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0msumtrans\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mFSv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mavert\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0msumtrans\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'along' is not defined"
      ]
     }
@@ -160,20 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.31956568805187535"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p=52\n",
     "vel=water['Q']/water['cross_area']\n",
@@ -186,7 +186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -200,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.1"
   },
   "pycharm": {
    "stem_cell": {
@@ -213,5 +213,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
