--- a/dead_loads.ipynb
+++ b/dead_loads.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "df_bridge=pd.read_excel('outputs/section.xlsx').set_index('Name')\n",
     "\n",
-    "span=50\n",
+    "span=60\n",
     "cw=6\n",
     "l_kerblen=0.6\n",
     "r_kerblen=0.6\n",
@@ -63,23 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Section at     Dead Load  Other Loads  Surface Loads  Pedestrian Load\n",
-      "0        0.00      0.000000      0.00000       0.000000           0.0000\n",
-      "1        6.25  26772.949219   1777.34375    1173.046875         820.3125\n",
-      "2       12.50  45896.484375   3046.87500    2010.937500        1406.2500\n",
-      "3       18.75  57370.605469   3808.59375    2513.671875        1757.8125\n",
-      "4       25.00  61195.312500   4062.50000    2681.250000        1875.0000\n",
-      "5       31.25  57370.605469   3808.59375    2513.671875        1757.8125\n",
-      "6       37.50  45896.484375   3046.87500    2010.937500        1406.2500\n",
-      "7       43.75  26772.949219   1777.34375    1173.046875         820.3125\n",
-      "8       50.00      0.000000      0.00000       0.000000           0.0000\n"
+      "[[0.3, 0.89656], [0.3, 1.21984], [0.3, 1.54312], [3.3, 0.89656], [3.3, 1.21984], [3.3, 1.54312], [0.3, 0.25], [0.9, 0.25], [1.5, 0.25], [2.1, 0.25], [2.7, 0.25], [3.3, 0.25], [0.3, 0.57328], [3.3, 0.57328]]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'strpdl1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\MILANJ~1\\AppData\\Local\\Temp/ipykernel_9600/2706497356.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;31m# excel_export(section)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m \u001b[0mexcel_loads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDL\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mODL\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mPEDL\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mSIDL\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Final year project\\Cross.py\u001b[0m in \u001b[0;36mexcel_loads\u001b[1;34m(PDL, ODL, PEDL, SIDL, sc)\u001b[0m\n\u001b[0;32m    615\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDL\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    616\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 617\u001b[1;33m         \u001b[0mstrpdl1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDL\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstress\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    618\u001b[0m         \u001b[0mstrpdl2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPDL\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstress\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    619\u001b[0m         \u001b[0mstrodl1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mODL\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstress\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'strpdl1' is not defined"
      ]
     }
    ],
@@ -94,9 +97,9 @@
     "\n",
     "\"\"\"Assigning section with cable \"\"\"\n",
     "section1=Cross_section(length,height)\n",
-    "section1.cableprop=cables(35,14,section).cablepos(,50)\n",
+    "section1.cableprop=cables(35,14,section).cablepos(6,50)\n",
     "\n",
-    "# print(section1.cableprop)\n",
+    "print(section1.cableprop)\n",
     "\n",
     "\n",
     "I=[]\n",
@@ -148,7 +151,7 @@
    "hash": "57e1b559dacf43725e1ed3764b0ee83225f8bdeeef0b183e08a2c01330bea852"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -162,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
